# sultek-connector

./: .env  README.md  example.py  pyproject.toml
sultek/: connector.py
tests/: pytest.ini  test_account_api.py  test_campaign_data_client.py
tools/: http_server.py
tools/demo/: getAccounts.json
tools/demo/getData/: 12345.json
